--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,9 +56,30 @@ hr {
 
 .noteContainer {
   margin-top:10px !important;
-  border:1px solid black;
+  /* border:1px solid black; */
 }
 
 .noteContainer > .card {
   background-color: #F2F6D0;
 }
+
+.formContainer {
+  border: 1px solid black;
+  padding: 5px;
+  text-align: right;
+}
+
+.removeNote {
+  color: #ff1744;
+  font-size: 28px;
+  position: absolute;
+  top: -10px;
+  right: 5px;
+  cursor: pointer;
+}
+
+.removeNote:hover {
+  color: #d50000;
+}
+
+
